# copstr

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: copstr.rs  lib.rs
tests/: copstr_tests.rs
