[package]
name = "copstr"
description = "Yet Another COpy STRing module"
version = "0.0.3"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/copstr"
repository = "https://github.com/lpenz/copstr"

[dev-dependencies]
anyhow = "1.0.45"
