[package]
name = "copstr"
description = "COpy STRing module"
version = "0.1.3"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/copstr"
repository = "https://github.com/lpenz/copstr"
categories = ["rust-patterns"]
keywords = ["string", "copy"]

[dev-dependencies]
anyhow = "1.0.86"
